--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             transition: color 0.3s;
         }
         .contact-info a:hover {
-            color: #ff0000;
+            color: #11ff00;
         }
         .stars {
             position: absolute;
