--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
         <h1>QA Engineer</h1><hr> 
         <img height="200px"  alt='Это я' src="ленка.jpg">
-        <p>Привет! Меня зовут Елена. Я QA инженер с опытом работы в ручном тестировании. Моя цель - обеспечивать качество программного обеспечения и помогать командам создавать надежные и эффективные продукты.</p>
+        <p>Привет :)  Меня зовут Елена. Я QA инженер с опытом работы в ручном тестировании. Моя цель - обеспечивать качество программного обеспечения и помогать командам создавать надежные и эффективные продукты.</p>
         <div class="contact-info">
             <p>Email: <a href="https://mail.ru/">Elenatsoy7@mail.ru</a></p>
             <p>Телефон:+79376631551</p>
